button made different

--- a/index.html
+++ b/index.html
@@ -278,7 +278,7 @@
               <div class="service-summary">
                 <p>We provide end-to-end digital services, including digital marketing, web development, graphic designing, and SEO, to help your business succeed online.</p>
                 <a href="#contact" class="service-btn">
-                  Get a Quote
+                  Get Started
                   <i class="bi bi-arrow-right"></i>
                 </a>
               </div>
