button made different

--- a/index.html
+++ b/index.html
@@ -64,9 +64,9 @@
         <div class="row">
           <div class="col-lg-7 content-col" data-aos="fade-up">
             <div class="content">
-              <div class="agency-name">
+              <!-- <div class="agency-name">
                 <h5>YOUR SOFTWARE HOUSE</h5>
-              </div>
+              </div> -->
 
               <div class="main-heading">
                 <h1>DIGITAL <br>SOLUTIONS</h1>
