--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
       </nav>
 
-      <a class="btn-getstarted" href="#contact">Get a Quote</a>
+      <a class="btn-getstarted" href="#contact">Get Started</a>
 
     </div>
   </header>
