--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       <a href="index.html" class="logo d-flex align-items-center me-auto me-xl-0">
         <!-- Uncomment the line below if you also wish to use an image logo -->
         <!-- <img src="assets/img/logo.webp" alt=""> -->
-        <h1 class="sitename">Your Software House</h1>
+        <img src="assets/img/DTCP.png" alt="" width="100px">
       </a>
 
       <nav id="navmenu" class="navmenu">
