--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <ul>
           <li><a href="#hero" class="active">Home</a></li>
           <li><a href="#about">About</a></li>
-          <li><a href="#services">Services</a></li>
+          <li><a href="service-details.html">Services</a></li>
           <li><a href="#portfolio">Portfolio</a></li>
           <li><a href="#team">Team</a></li>
           <li><a href="#contact">Contact</a></li>
@@ -50,7 +50,7 @@
         <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
       </nav>
 
-      <a class="btn-getstarted" href="#contact">Get Started</a>
+      <a class="btn-getstarted" href="get-started.html">Get Started</a>
 
     </div>
   </header>
@@ -68,7 +68,7 @@
               </div> -->
 
               <div class="main-heading">
-                <h1>DIGITAL <br>SOLUTIONS</h1>
+                <h1>Empowering Your <span>Digital Future</span></h1>
               </div>
 
               <div class="divider"></div>
@@ -89,7 +89,8 @@
           <div class="col-lg-5" data-aos="zoom-out">
             <div class="visual-content">
               <div class="fluid-shape">
-                <img src="https://img.freepik.com/free-photo/programming-background-collage_23-2149901789.jpg?uid=R183252386&ga=GA1.1.1460913344.1747603468&semt=ais_hybrid&w=740" alt="Digital Solutions" class="fluid-img">
+                            <img src="https://cdn.pixabay.com/animation/2024/02/22/07/04/07-04-49-688_512.gif" alt="Digital Solutions" class="img-fluid rounded-4">
+
               </div>
             </div>
           </div>
@@ -111,11 +112,11 @@
         <div class="row gx-5 align-items-center">
           <div class="col-lg-6" data-aos="fade-right" data-aos-delay="200">
             <div class="about-image position-relative">
-              <img src="assets/img/about/about-portrait-1.webp" class="img-fluid rounded-4 shadow-sm" alt="About Image" loading="lazy">
-              <div class="experience-badge">
+              <img src="https://images.unsplash.com/photo-1510074377623-8cf13fb86c08?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTl8fHNvZnR3YXJlJTIwY29tcGFueXxlbnwwfHwwfHx8MA%3D%3D" class="img-fluid rounded-4 shadow-sm" alt="About Image" loading="lazy">
+              <!-- <div class="experience-badge">
                 <span class="years">10+</span>
                 <span class="text">Years of Expertise</span>
-              </div>
+              </div> -->
             </div>
           </div>
 
@@ -461,15 +462,15 @@
           </div>
 
           <div class="content-right position-relative" data-aos="fade-left" data-aos-delay="300">
-            <img src="assets/img/misc/misc-1.webp" alt="Digital Solutions" class="img-fluid rounded-4">
+                <img src="https://img.freepik.com/free-photo/programming-background-collage_23-2149901789.jpg?uid=R183252386&ga=GA1.1.1460913344.1747603468&semt=ais_hybrid&w=740" alt="Digital Solutions" class="fluid-img">
             <div class="floating-card">
-              <div class="card-icon">
+              <!-- <div class="card-icon">
                 <i class="bi bi-graph-up-arrow"></i>
               </div>
               <div class="card-content">
                 <span class="stats-number">300%</span>
                 <span class="stats-text">Increased ROI</span>
-              </div>
+              </div> -->
             </div>
           </div>
 
@@ -816,8 +817,9 @@
               </div>
               <div class="info-content">
                 <h4>Our Address</h4>
-                <p>123 Digital Avenue, Tech City, TC 75001</p>
-              </div>
+<p>Innovista, Defence Central  Library</p>
+          <p>Sunset Boulevard, Phase 2 Extension Road</p>
+          <p>Karachi</p>              </div>
             </div>
           </div>
 
@@ -828,8 +830,8 @@
               </div>
               <div class="info-content">
                 <h4>Email Address</h4>
-                <p>info@yoursoftwarehouse.com</p>
-                <p>support@yoursoftwarehouse.com</p>
+                <p>dtcpakistani@gmail.com</p>
+                <!-- <p>support@yoursoftwarehouse.com</p> -->
               </div>
             </div>
           </div>
@@ -852,7 +854,7 @@
 
       <!-- Google Maps (Full Width) -->
       <div class="map-section" data-aos="fade-up" data-aos-delay="200">
-        <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d48389.78314118045!2d-74.006138!3d40.710059!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c25a22a3bda30d%3A0xb89d1fe6bc499443!2sDowntown%20Conference%20Center!5e0!3m2!1sen!2sus!4v1676961268712!5m2!1sen!2sus" width="100%" height="500" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        <iframe src="https://www.google.com/maps/place/Capt+Waseem+Ud+Din+Razi+Shaheed+Library/@24.8311695,67.057757,17z/data=!3m1!4b1!4m6!3m5!1s0x3eb33c47910d7623:0xe55d4b1b10cd06fe!8m2!3d24.8311647!4d67.0603319!16s%2Fg%2F1tx1rp6w?entry=ttu&g_ep=EgoyMDI1MDYxMS4wIKXMDSoASAFQAw%3D%3D" width="100%" height="500" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
       </div>
 
       <!-- Contact Form Section (Overlapping) -->
@@ -927,7 +929,8 @@
       <div class="row gy-4">
         <div class="col-lg-5 col-md-12 footer-about">
           <a href="index.html" class="logo d-flex align-items-center">
-            <span class="sitename">Your Software House</span>
+<img src="assets/img/dtcpak logo.png" alt="Your Software House Logo" class="img-fluid" style="max-height: 100px; width: auto;">      </a>
+
           </a>
           <p>We are a leading software house specializing in digital marketing, web development, graphic designing, and SEO services to help businesses succeed in the digital world.</p>
           <div class="social-links d-flex mt-4">
@@ -961,20 +964,20 @@
 
         <div class="col-lg-3 col-md-12 footer-contact text-center text-md-start">
           <h4>Contact Us</h4>
-          <p>123 Digital Avenue</p>
-          <p>Tech City, TC 75001</p>
-          <p>United States</p>
-          <p class="mt-4"><strong>Phone:</strong> <span>+1 234 567 8900</span></p>
-          <p><strong>Email:</strong> <span>info@yoursoftwarehouse.com</span></p>
+          <p>Innovista, Defence Central  Library</p>
+          <p>Sunset Boulevard, Phase 2 Extension Road</p>
+          <p>Karachi</p>
+          <p class="mt-4"><strong>Phone:</strong> <span>+92 303 2590468</span></p>
+          <p><strong>Email:</strong> <span>dtcpakistani@gmail.com</span></p>
         </div>
 
       </div>
     </div>
 
     <div class="container copyright text-center mt-4">
-      <p>© <span>Copyright</span> <strong class="px-1 sitename">Your Software House</strong> <span>All Rights Reserved</span></p>
+      <p>© <span>Copyright</span> <strong class="px-1 sitename">DTC Pakistan</strong> <span>All Rights Reserved</span></p>
       <div class="credits">
-        Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
+        <!-- Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a> -->
       </div>
     </div>
 
