--- a/service-details.html
+++ b/service-details.html
@@ -43,7 +43,7 @@
           <li><a href="#hero" class="active">Home</a></li>
           <li><a href="service-details.html">Services</a></li>
           <li><a href="#about">About</a></li>
-          <li><a href="#portfolio">Portfolio</a></li>
+          <li><a href="portfolio-details.html">Portfolio</a></li>
           <li><a href="#team">Team</a></li>
           <li><a href="#contact">Contact</a></li>
         </ul>
